ch 06 enum and pattern matchin WIP

--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_06_enums_and_pattern_matching.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_06_enums_and_pattern_matching.ipynb
@@ -585,9 +585,12 @@
     "types:\n",
     "\n",
     "```rust\n",
+    "    // can be inferred from concrete assignment\n",
     "    let some_number = Some(5);\n",
     "    let some_char = Some('e');\n",
     "\n",
+    "    // assigning None isn't enough info for Rust to infer at compile time\n",
+    "    // so we need to EXPLICITLY define the type T for Option<T> here\n",
     "    let absent_number: Option<i32> = None;\n",
     "```\n",
     "\n",
@@ -596,7 +599,428 @@
     "value inside the Some variant. For absent_number, Rust requires us to annotate  \n",
     "the overall Option type: the compiler can’t infer the type that the  \n",
     "corresponding Some variant will hold by looking only at a None value. Here, we  \n",
-    "tell Rust that we mean for absent_number to be of type Option<i32>."
+    "tell Rust that we mean for absent_number to be of type Option<i32>.\n",
+    "\n",
+    "When we have a Some value, we know that a value is present and the value is held  \n",
+    "within the Some. When we have a None value, in some sense it means the same  \n",
+    "thing as null: we don’t have a valid value. So why is having Option<T> any  \n",
+    "better than having null?\n",
+    "\n",
+    "In short, because Option<T> and T (where T can be any type) are different types,  \n",
+    "the compiler won’t let us use an Option<T> value as if it were definitely a  \n",
+    "valid value. For example, this code won’t compile, because it’s trying to add  \n",
+    "an i8 to an Option<i8>:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "cannot add `Option<i8>` to `i8`",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m[E0277] Error:\u001b[0m cannot add `Option<i8>` to `i8`",
+      "   \u001b[38;5;246m╭\u001b[0m\u001b[38;5;246m─\u001b[0m\u001b[38;5;246m[\u001b[0mcommand_3:1:1\u001b[38;5;246m]\u001b[0m",
+      "   \u001b[38;5;246m│\u001b[0m",
+      " \u001b[38;5;246m5 │\u001b[0m \u001b[38;5;249m \u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249ml\u001b[0m\u001b[38;5;249me\u001b[0m\u001b[38;5;249mt\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249ms\u001b[0m\u001b[38;5;249mu\u001b[0m\u001b[38;5;249mm\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249m=\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249mx\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;54m+\u001b[0m\u001b[38;5;249m \u001b[0m\u001b[38;5;249my\u001b[0m\u001b[38;5;249m;\u001b[0m",
+      " \u001b[38;5;246m  ·\u001b[0m                 \u001b[38;5;54m┬\u001b[0m  ",
+      " \u001b[38;5;246m  ·\u001b[0m                 \u001b[38;5;54m╰\u001b[0m\u001b[38;5;54m─\u001b[0m\u001b[38;5;54m─\u001b[0m no implementation for `i8 + Option<i8>`",
+      "\u001b[38;5;246m───╯\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "{\n",
+    "    let x: i8 = 5;\n",
+    "    let y: Option<i8> = Some(5);\n",
+    "\n",
+    "    // cannot add `Option` to `i8`\n",
+    "    let sum = x + y; // compiler error : no implementation for `i8 + Option`\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### -- Compiler Error : Option<i8> + i8\n",
+    "\n",
+    "If we run this code, we get an error message like this one:\n",
+    "\n",
+    "```sh\n",
+    "$ cargo run\n",
+    "   Compiling enums v0.1.0 (file:///projects/enums)\n",
+    "error[E0277]: cannot add `Option<i8>` to `i8`\n",
+    " --> src/main.rs:5:17\n",
+    "  |\n",
+    "5 |     let sum = x + y;\n",
+    "  |                 ^ no implementation for `i8 + Option<i8>`\n",
+    "  |\n",
+    "  = help: the trait `Add<Option<i8>>` is not implemented for `i8`\n",
+    "  = help: the following other types implement trait `Add<Rhs>`:\n",
+    "            <&'a i8 as Add<i8>>\n",
+    "            <&i8 as Add<&i8>>\n",
+    "            <i8 as Add<&i8>>\n",
+    "            <i8 as Add>\n",
+    "\n",
+    "For more information about this error, try `rustc --explain E0277`.\n",
+    "error: could not compile `enums` due to previous error\n",
+    "\n",
+    "```\n",
+    "\n",
+    "Intense! In effect, this error message means that Rust doesn’t understand how to  \n",
+    "add an i8 and an Option<i8>, because they’re different types.  \n",
+    "\n",
+    "When we have a value of a type :\n",
+    "-  like i8 in Rust, \n",
+    "- the compiler will ensure that we always have a valid value. \n",
+    "\n",
+    "We can proceed confidently `without having to check for null` before using that  \n",
+    "value. Only when we have an Option<i8> (or whatever type of value we’re working  \n",
+    "with) do we have to worry about possibly not having a value, and the compiler  \n",
+    "will make sure we handle that case before using the value.  "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### -- `Option<T>` MUST be converted to `T` => perform `T` operations\n",
+    "\n",
+    "In other words, you have to convert an `Option<T>` to a `T` before you can  \n",
+    "perform `T` operations with it. Generally, this helps :  \n",
+    "\n",
+    "- catch one of the most common issues with null: \n",
+    "- assuming that something isn’t null when it actually is.\n",
+    "\n",
+    "`Eliminating the risk of incorrectly assuming a not-null value` helps  \n",
+    "you to be more confident in your code. \n",
+    "\n",
+    "In order to have a value that can possibly be null :\n",
+    "\n",
+    "- you must explicitly opt in by making the type of that value `Option<T>`. \n",
+    "- Then, when you use that value, you are required to explicitly handle the case  \n",
+    "when the value is null. \n",
+    "\n",
+    "Everywhere that a value has a type that isn’t an `Option<T>`, you can safely  \n",
+    "assume that the value isn’t null. This was a deliberate design decision for Rust  \n",
+    "to limit null’s pervasiveness and increase the safety of Rust code.\n",
+    "\n",
+    "So how do you get the T value out of a Some variant when you have a value of  \n",
+    "type Option<T> so that you can use that value? The Option<T> enum has a large  \n",
+    "number of methods that are useful in a variety of situations; you can check them  \n",
+    "out in its documentation. Becoming familiar with the methods on Option<T> will  \n",
+    "be extremely useful in your journey with Rust.\n",
+    "\n",
+    "In general, in order to use an Option<T> value, you want to have code that will  \n",
+    "handle each variant. You want some code that will : \n",
+    "\n",
+    "- run only when you have a Some(T) value,  \n",
+    "- and this code is allowed to use the inner T. \n",
+    "\n",
+    "You want some other code to run only if you have a :  \n",
+    "\n",
+    "- None value, and \n",
+    "- that code doesn’t have a T value available.  \n",
+    "\n",
+    "The match expression is a control flow construct that does just this when used  \n",
+    "with enums: it will run different code depending on which variant of the enum it  \n",
+    "has, and that code can use the data inside the matching value."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `match` Control Flow Construct\n",
+    "---\n",
+    "\n",
+    "Rust has an extremely powerful control flow construct called `match` that  \n",
+    "allows you to :  \n",
+    "\n",
+    "- compare a value against a series of patterns \n",
+    "- and then execute code based on which pattern matches.  \n",
+    "\n",
+    "Patterns can be made up of literal values, variable names, wildcards, and many  \n",
+    "other things; Chapter 18 covers all the different kinds of patterns and what  \n",
+    "they do. The power of match comes from the expressiveness of the patterns and  \n",
+    "the fact that the compiler confirms that all possible cases are handled."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### -- Coin Sorting Machine\n",
+    "\n",
+    "<img src=\"https://i.gifer.com/AP10.gif\">\n",
+    "\n",
+    "\n",
+    "Think of a match expression as being like a coin-sorting machine:  \n",
+    "\n",
+    "- coins slide down a track with variously sized holes along it, and  \n",
+    "- each coin falls through the first hole it encounters that it fits into.  \n",
+    "\n",
+    "In the same way, values go through each pattern in a match, and at the first  \n",
+    "pattern the value “fits,” the value falls into the associated code block to be  \n",
+    "used during execution.\n",
+    "\n",
+    "Speaking of coins, let’s use them as an example using match! We can write a  \n",
+    "function that takes an unknown US coin and, in a similar way as the counting  \n",
+    "machine, determines which coin it is and returns its value in cents, as shown  \n",
+    "in Listing 6-3."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// Coin enum will be stored on the stack\n",
+    "enum Coin {\n",
+    "    Penny,\n",
+    "    Nickel,\n",
+    "    Dime,\n",
+    "    Quarter\n",
+    "}\n",
+    "\n",
+    "// - Since enum are stored on the stack, they can be passed by value (as a copy)\n",
+    "// instead of by reference\n",
+    "// - u8 is returned by value (as a copy) since it is also stack allocated\n",
+    "fn value_in_cents(coin : Coin) -> u8 {\n",
+    "    // Match seems very similar to a conditional if expression\n",
+    "    // However, the DIFFERENCES are:\n",
+    "    // - match is EXHAUSTIVE, meaning ALL possible cases must be handled, else\n",
+    "    // the compiler will throw an error\n",
+    "    // - condition can evaluate to ANY TYPE, not just bool (like if expression)\n",
+    "    // - EACH ARM of the match expression can evaluate to DIFFERENT TYPES\n",
+    "    // - the resultant value of the MATCHED expression is returned for the WHOLE\n",
+    "    // function\n",
+    "    match coin {\n",
+    "        Coin::Penny => 1,\n",
+    "        Coin::Nickel => 5,\n",
+    "        Coin::Dime => 10,\n",
+    "        Coin::Quarter => 25\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### -- Explain Coin enum => value_in_cents match function\n",
+    "\n",
+    "> Listing 6-3: An enum and a match expression that has the variants of the enum  \n",
+    "as its patterns\n",
+    "\n",
+    "Let’s break down the match in the value_in_cents function. First we list the  \n",
+    "match keyword followed by an expression, which in this case is the value coin.  \n",
+    "This seems very similar to a conditional expression used with if, but there’s a  \n",
+    "big difference: with if, the condition needs to evaluate to a Boolean value, but  \n",
+    "here it can be any type. The type of coin in this example is the Coin enum that  \n",
+    "we defined on the first line.\n",
+    "\n",
+    "Next are the match arms. An arm has two parts: `a pattern` and `some code` :  \n",
+    "\n",
+    "- The first arm here has a pattern that is the value Coin::Penny and \n",
+    "- then the => operator that separates the pattern and the code to run. \n",
+    "\n",
+    "The code in this case is just the value 1. Each arm is separated from the next  \n",
+    "with a comma.\n",
+    "\n",
+    "When the match expression executes, it compares the resultant value against the  \n",
+    "pattern of each arm, in order. If a pattern matches the value, the code  \n",
+    "associated with that pattern is executed. If that pattern doesn’t match the  \n",
+    "value, execution continues to the next arm, much as in a coin-sorting machine.  \n",
+    "We can have as many arms as we need: in Listing 6-3, our match has four arms.\n",
+    "\n",
+    "The code associated with each arm is an expression, and the resultant value of  \n",
+    "the expression in the matching arm is the value that gets returned for the  \n",
+    "entire match expression."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### -- match Arms can return closures to support side effects\n",
+    "\n",
+    "We don’t typically use curly brackets if the match arm code is short, as it is  \n",
+    "in Listing 6-3 where each arm just returns a value. If you want to run multiple  \n",
+    "lines of code in a match arm, you must use curly brackets, and the comma  \n",
+    "following the arm is then optional. For example, the following code prints  \n",
+    "“Lucky penny!” every time the method is called with a Coin::Penny, but still  \n",
+    "returns the last value of the block, 1:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "fn values_in_cents(coin : Coin) -> u8 {\n",
+    "    match coin {\n",
+    "        Coin::Penny => {\n",
+    "            println!(\"Lucky Penny!\");\n",
+    "            1\n",
+    "        }\n",
+    "        Coin::Nickel => 5,\n",
+    "        Coin::Dime => 10,\n",
+    "        Coin::Quarter => 25,\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Patterns That Bind to Values\n",
+    "\n",
+    "Another useful feature of match arms is that they can bind to the parts of the  \n",
+    "values that match the pattern. This is how we can extract values out of enum  \n",
+    "variants.\n",
+    "\n",
+    "As an example, let’s change one of our enum variants to hold data inside it.  \n",
+    "From 1999 through 2008, the United States minted quarters with different designs  \n",
+    "for each of the 50 states on one side. No other coins got state designs, so only  \n",
+    "quarters have this extra value. We can add this information to our enum by  \n",
+    "changing the Quarter variant to include a UsState value stored inside it, which  \n",
+    "we’ve done in Listing 6-4."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#[derive(Debug)]\n",
+    "enum UsState {\n",
+    "    California,\n",
+    "    Chicago,\n",
+    "    Texas,\n",
+    "    Washington,\n",
+    "    // -- snip --\n",
+    "}\n",
+    "\n",
+    "enum Coin {\n",
+    "    Penny,\n",
+    "    Nickel,\n",
+    "    Dime,\n",
+    "    // From 1999 to 2008, the Us minted quarters with a dfferent design for each\n",
+    "    // of the 50 states on the back of the quarter arbitrarily\n",
+    "    // - this did not change the VALUE of the quarter\n",
+    "    // - only added new display design on the back\n",
+    "    Quarter(UsState), // Quarter variant updated with UsState enum as associated data\n",
+    "}\n",
+    "\n",
+    "// @audit : Had to reset environment to resolve enum Coin definition from\n",
+    "// previous cell earlier in this Jupyter notebook"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### -- Update Coin sorting to handle Quarter's additional UsState sub variant\n",
+    "\n",
+    "> Listing 6-4: A Coin enum in which the Quarter variant also holds a UsState value\n",
+    "\n",
+    "Let’s imagine that a friend is trying to collect all 50 state quarters. While we  \n",
+    "sort our loose change by coin type, we’ll also call out the name of the state  \n",
+    "associated with each quarter so that if it’s one our friend doesn’t have, they  \n",
+    "can add it to their collection.\n",
+    "\n",
+    "In the match expression for this code, we add a variable called state to the  \n",
+    "pattern that matches values of the variant Coin::Quarter. When a Coin::Quarter  \n",
+    "matches, the state variable will bind to the value of that quarter’s state. Then  \n",
+    "we can use state in the code for that arm, like so:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "State quarter from California\n",
+      "State quarter from Texas\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fn value_in_cents(coin : Coin) -> u8 {\n",
+    "    match coin {\n",
+    "        Coin::Penny => 1,\n",
+    "        Coin::Nickel => 5,\n",
+    "        Coin::Dime => 10,\n",
+    "        Coin::Quarter(state) => {\n",
+    "            println!(\"State quarter from {:?}\", state);\n",
+    "            25\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "{\n",
+    "    // state quarter found\n",
+    "    let cali_quarter = Coin::Quarter(UsState::California);\n",
+    "    let texas_quarter = Coin::Quarter(UsState::Texas);\n",
+    "\n",
+    "    let lucky_penny = Coin::Penny;\n",
+    "\n",
+    "    // insert coins match machine\n",
+    "    value_in_cents(cali_quarter);\n",
+    "    value_in_cents(texas_quarter);\n",
+    "    value_in_cents(lucky_penny);\n",
+    "}"
    ]
   }
  ],
