Smart pointers WIP : Rev 2

--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_15_smart_pointers_wip.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_15_smart_pointers_wip.ipynb
@@ -22,7 +22,15 @@
     "To explore the general concept, we’ll look at a couple of different examples of  \n",
     "smart pointers, including a reference counting smart pointer type. This pointer  \n",
     "enables you to allow data to have multiple owners by keeping track of the number  \n",
-    "of owners and, when no owners remain, cleaning up the data.  \n",
+    "of owners and, when no owners remain, cleaning up the data.  "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### -- Smart Pointers own Data, References only Borrow --\n",
     "\n",
     "Rust, with its concept of ownership and borrowing, has an additional difference  \n",
     "between references and smart pointers: while references only borrow data, in  \n",
@@ -41,6 +49,8 @@
     "String, for example, stores its capacity as metadata and has the extra ability  \n",
     "to ensure its data will always be valid UTF-8.  \n",
     "\n",
+    "#### -- Structs with Deref and Drop Traits --\n",
+    "\n",
     "Smart pointers are usually implemented using structs. Unlike an ordinary struct,  \n",
     "smart pointers implement the `Deref` and `Drop` traits. \n",
     "- The `Deref` trait allows an instance of the smart pointer struct to behave  \n",
@@ -54,24 +64,76 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bender is alive!\n",
+      "Bender has been DROPPED\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "struct ToyRobot{\n",
+    "    name: String\n",
+    "}\n",
+    "\n",
+    "impl Drop for ToyRobot{\n",
+    "    fn drop(&mut self){\n",
+    "        println!(\"{} has been DROPPED\", self.name);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "{   // start playing with ToyRobot\n",
+    "    let my_robot = ToyRobot{name: String::from(\"Bender\")};\n",
+    "    println!(\"{} is alive!\", my_robot.name);\n",
+    "}   // done playing with ToyRobot\n",
+    "    // <- At this point the ToyRobot is dropped\n",
+    "    // \"Bender has been DROPPED\" will get printed before the end of the block"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### -- Scope of Smart Pointer Pattern Covered Here --\n",
+    "\n",
     "Given that the smart pointer pattern is a general design pattern used frequently  \n",
     "in Rust, this chapter won’t cover every existing smart pointer. Many libraries  \n",
     "have their own smart pointers, and you can even write your own. We’ll cover the  \n",
     "most common smart pointers in the standard library:  \n",
     "\n",
-    "- Box<T> for allocating values on the heap  \n",
-    "- Rc<T>, a reference counting type that enables multiple ownership  \n",
-    "- Ref<T> and RefMut<T>, accessed through RefCell<T>, a type that enforces the  \n",
-    "borrowing rules at runtime instead of compile time  \n",
+    "- **`Box<T>`** for allocating values on the heap  \n",
+    "- **`Rc<T>`**, a reference counting type that enables multiple ownership  \n",
+    "- **`Ref<T>`** and **`RefMut<T>`**, accessed through **`RefCell<T>`**, a type  \n",
+    "that enforces the borrowing rules at runtime instead of compile time  \n",
     "\n",
     "\n",
-    "In addition, we’ll cover the interior mutability pattern where an immutable type  \n",
-    "exposes an API for mutating an interior value. We’ll also discuss reference  \n",
-    "cycles: how they can leak memory and how to prevent them.  \n",
+    "In addition, we’ll cover : \n",
+    "- the interior mutability pattern where an immutable type exposes an API for  \n",
+    "mutating an interior value. \n",
+    "\n",
+    "We’ll also discuss reference cycles: \n",
+    "- how they can leak memory and how to prevent them.  \n",
     "\n",
     "Let’s dive in!  "
    ]
@@ -93,12 +155,12 @@
     "instead of on the stack. But they don’t have many extra capabilities either.  \n",
     "You’ll use them most often in these situations:  \n",
     "\n",
-    "- When you have a type whose size can’t be known at compile time and you want to  \n",
-    "use a value of that type in a context that requires an exact size  \n",
-    "- When you have a large amount of data and you want to transfer ownership but  \n",
-    "ensure the data won’t be copied when you do so  \n",
+    "- When you have a `type whose size can’t be known at compile time` and  \n",
+    "you want to use a value of that type in a context that requires an exact size  \n",
+    "- When you have a large amount of data and you want to `transfer ownership` but  \n",
+    "`ensure the data won’t be copied` when you do so  \n",
     "- When you want to own a value and you care only that it’s a type that  \n",
-    "implements a particular trait rather than being of a specific type\n",
+    "implements a particular trait rather than being of a specific type **`????`**\n",
     "\n",
     "We’ll demonstrate the first situation in the  \n",
     "“Enabling Recursive Types with Boxes” section. In the second case, transferring  \n",
@@ -130,7 +192,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -158,7 +224,13 @@
     "                           // `b `is box pointer allocated on the stack pointing\n",
     "                           // to the heap location where (address) value 5 is \n",
     "                           // stored\n",
-    "    println!(\"b = {}\", b);\n",
+    "    println!(\"b = {}\", b);  // prinln is accessing 'b' by dereferencing it\n",
+    "                            // `b` is a pointer to the heap location where the\n",
+    "                            // value 5 is stored\n",
+    "                            // effectively value 5 is printed\n",
+    "    // - storing a single compile time known value on the heap is not very useful\n",
+    "    // - storing on the heap is more useful in later examples when we store much\n",
+    "    // LARGER and VARIABLE amounts of data on the heap\n",
     "\n",
     "}   // closure ends\n",
     "// the Box pointer `b` is deallocated\n",
@@ -172,6 +244,8 @@
    "metadata": {},
    "source": [
     "> Listing 15-1: Storing an i32 value on the heap using a box\n",
+    "\n",
+    "#### -- Line by Line Stack and Heap op for Box Declaration --\n",
     "\n",
     "We define the variable b to have the value of a Box that points to the value 5,  \n",
     "which is allocated on the heap. This program will print b = 5; in this case, we  \n",
@@ -213,14 +287,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### More Information About the Cons List\n",
+    "#### -- Explain Recursion with the Cons List --\n",
     "\n",
     "A cons list is a data structure that comes from the Lisp programming language  \n",
     "and its dialects and is made up of nested pairs, and is the Lisp version of a  \n",
-    "linked list. Its name comes from the cons function  \n",
-    "(short for “construct function”) in Lisp that constructs a new pair from its  \n",
-    "two arguments. By calling cons on a pair consisting of a value and another pair,  \n",
-    "we can construct cons lists made up of recursive pairs.  \n",
+    "linked list. Its name comes from the cons function (“construct function”) in  \n",
+    "Lisp that constructs a new pair from its two arguments. By calling cons on a  \n",
+    "pair consisting of a value and another pair, we can construct cons lists made up  \n",
+    "of recursive pairs.  "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### -- Cons List Psuedo Code Example --\n",
     "\n",
     "For example, here’s a pseudocode representation of a cons list containing the  \n",
     "list 1, 2, 3 with each pair in parentheses:  \n",
@@ -234,7 +316,13 @@
     "without a next item. A cons list is produced by recursively calling the cons  \n",
     "function. The canonical name to denote the base case of the recursion is Nil.  \n",
     "Note that this is not the same as the “null” or “nil” concept in Chapter 6,  \n",
-    "which is an invalid or absent value.  "
+    "which is an invalid or absent value.\n",
+    "\n",
+    "> The cons list isn’t a commonly used data structure in Rust. Most of the time  \n",
+    "when you have a list of items in Rust, Vec<T> is a better choice to use. Other,  \n",
+    "more complex recursive data types are useful in various situations, but by  \n",
+    "starting with the cons list in this chapter, we can explore how boxes let us  \n",
+    "define a recursive data type without much distraction.  "
    ]
   },
   {
@@ -242,11 +330,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The cons list isn’t a commonly used data structure in Rust. Most of the time  \n",
-    "when you have a list of items in Rust, Vec<T> is a better choice to use. Other,  \n",
-    "more complex recursive data types are useful in various situations, but by  \n",
-    "starting with the cons list in this chapter, we can explore how boxes let us  \n",
-    "define a recursive data type without much distraction.  \n",
+    "#### -- Cons List Implemented as an Enum Definition --\n",
     "\n",
     "Listing 15-2 contains an enum definition for a cons list. Note that this code  \n",
     "won’t compile yet because the List type doesn’t have a known size, which we’ll  \n",
@@ -258,7 +342,11 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "ename": "Error",
@@ -291,6 +379,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### -- Compile Error : Recursion Without Indirection -- \n",
+    "\n",
     "> Listing 15-2: The first attempt at defining an enum to represent a cons list  \n",
     "data structure of i32 values\n",
     "\n",
@@ -303,54 +393,8 @@
     "Using the List type to store the list 1, 2, 3 would look like the code in  \n",
     "Listing 15-3:\n",
     "\n",
-    "> Filename: src/main.rs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "list = Cons(1, Cons(2, Cons(3, Nil)))\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "()"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "// Derive the Debug trait for pretty printing the List enum\n",
-    "#[derive(Debug)]\n",
-    "enum List {\n",
-    "    // Box<> here addresses the infinite recursion size issue for the List enum\n",
-    "    Cons(i32, Box<List>), \n",
-    "    Nil,\n",
-    "}\n",
+    "> Filename: src/main.rs\n",
     "\n",
-    "\n",
-    "{\n",
-    "    let list = List::Cons(1, Box::new(List::Cons(2, Box::new(List::Cons(3, Box::new(List::Nil))))));\n",
-    "    println!(\"list = {:?}\", list);\n",
-    "}\n",
-    "\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "The first Cons value holds 1 and another List value. This List value is another  \n",
     "Cons value that holds 2 and another List value. This List value is one more Cons  \n",
     "value that holds 3 and a List value, which is finally Nil, the non-recursive  \n",
@@ -379,7 +423,83 @@
     "error: could not compile `cons-list` due to previous error  \n",
     "```\n",
     "\n",
-    "> Listing 15-4: The error we get when attempting to define a recursive enum\n",
+    "> Listing 15-4: The error we get when attempting to define a recursive enum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "list = Cons(1, Cons(2, Cons(3, Nil)))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "()"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "// Derive the Debug trait for pretty printing the List enum using {:?} specifier\n",
+    "#[derive(Debug)]    // Rust will GENERATE the Debug Trait for enum List\n",
+    "enum List {         // Define an enum with 2 variants\n",
+    "                    // - Cons\n",
+    "                    // - Nil\n",
+    "    // Using Box<> here avoids the infinite recursion size issue because\n",
+    "    // Box<List> is a heap allocated value that allows us to store another List\n",
+    "    // - Instead of potentially expanding to infinite size of the Cons List,\n",
+    "    // We are recursively writing and retrieving from the defined address on the\n",
+    "    // heap as we process the List\n",
+    "    // @audit-ok : Time Recursion on Fixed Space -> One shot on Unbounded Space?\n",
+    "    // ANSWER : No, it's not a recursion on fixed space, it's just recursion on\n",
+    "    // the heap and the heap is LARGER than the stack so the recursion can go\n",
+    "    // DEEPER, but it's not actually INFINITE \n",
+    "    // It's BOUNDED to the PHYSICAL memory of our compute SUBSTRATE\n",
+    "    Cons(i32, Box<List>), \n",
+    "    // Nil variant represents an empty list\n",
+    "    // Essentially the EOF (end of file) equivalent for Cons List\n",
+    "    Nil,\n",
+    "}\n",
+    "\n",
+    "    // push new frame to the stack\n",
+    "{   // begin new scope\n",
+    "\n",
+    "    // `list` comes into scope, creating a VARIABLE Cons List\n",
+    "    // - With 3 cons elements : 1 -> 2 -> 3 -> Nil\n",
+    "    // - Each cons element is followed by another List wrapped in a Box<>\n",
+    "    // - The last element is Nil which is the EOL (end-of-list) for the List\n",
+    "    // - While creating this list, we allocate memory for each Box<List>\n",
+    "    let list = List::Cons(1, Box::new(List::Cons(2, Box::new(List::Cons(3, Box::new(List::Nil))))));\n",
+    "    println!(\"list = {:?}\", list);\n",
+    "}   // end scope\n",
+    "    \n",
+    "// `list` goes out of scope\n",
+    "// - Rust calls the drop function for each Box<List> in the list\n",
+    "// - this deallocates the heap memory for each Box<List>\n",
+    "// - Finally the stack memory used by the `list` variable is deallocated\n",
+    "// pop frame off the stack"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### -- Cons List Fixed : Indirect to `Box<List>` recursion --\n",
     "\n",
     "The error shows this type “has infinite size.” The reason is that we’ve defined  \n",
     "List with a variant that is recursive: it holds another value of itself directly.  \n",
@@ -407,8 +527,10 @@
     "}\n",
     "```\n",
     "\n",
-    "To determine how much space to allocate for a Message value, Rust goes through  \n",
-    "each of the variants to see which variant needs the most space. Rust sees that :  \n",
+    "To determine how much `space to allocate for a Message value`, Rust goes  \n",
+    "through each of the variants to `see which variant needs the most space`\n",
+    "\n",
+    "Rust sees that :  \n",
     "\n",
     "- Message::Quit doesn’t need any space,  \n",
     "- Message::Move needs enough space to store two i32 values,  \n",
@@ -423,6 +545,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### -- Illustrate Recursion Without Indirection : Compile Time Error --\n",
+    "\n",
     "Contrast this with what happens when Rust tries to determine how much space a  \n",
     "recursive type like the List enum in Listing 15-2 needs. The compiler starts by  \n",
     "looking at the Cons variant, which holds a value of type i32 and a value of type  \n",
@@ -481,7 +605,11 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -601,7 +729,11 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -689,7 +821,11 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -749,7 +885,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "struct MyBox<T>(T);\n",
@@ -783,7 +923,11 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "ename": "Error",
@@ -859,7 +1003,11 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "{   \n",
@@ -957,7 +1105,7 @@
    "codemirror_mode": "rust",
    "file_extension": ".rs",
    "mimetype": "text/rust",
-   "name": "rust",
+   "name": "Rust",
    "pygment_lexer": "rust",
    "version": ""
   },
